# IMU_receiver

./: .gitignore  CMakeLists.txt  MadgwickAHRS.c  README.md  example_mtw.cpp  imu_sensor_mtw  reciever.py  recover.cxx  torch_humanoid_amp.py  vtk_main.cxx
wonjin/: README.md  VTK_Mocap.py  VTK_main.py  read_csv.py
wonjin/src/: callback.py  data.py  temp.py  utils.py
